--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.8",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.1.2",
     "prettier": "^2.7.1",
     "typescript": "*"
   }
